2008-07-16  Sam Steingold  <sds@gnu.org>

	* macros2.lisp (report-one-new-value-string)
	(report-one-new-value-string-instead, report-new-values-string):
	remove the leading "You may " from the message: the message
	describes the action of the user, such as "Abort main loop" or
	"inspect this frame", cf. reploop.lisp
	* reploop.lisp (commands1): more uniform message capitalization

2008-07-16  Sam Steingold  <sds@gnu.org>

	* control.d (SYMBOL-VALUE): tighten identification of STORE-VALUE
	selection in CHECK-VALUE: value2 is T, not just non-NIL
	* eval.d (eval1): ditto
	* error.d, lispbibl.d (check_variable_value_replacement):
	ditto (comment)

2008-07-16  Sam Steingold  <sds@gnu.org>

	* error.d (check_variable_value_replacement): do not pushSTACK
	PLACE unless check_value is to be called

2008-07-16  Sam Steingold  <sds@gnu.org>

	DIRECTORY signals correctable errors on bad pathnames [1st draft]
	* pathname.d (handle_directory_encoding_error): new function:
	ignore the error, pass condition in value1 back to the caller
	(direntry_to_string): new function: call n_char_to_string, catch
	charset-type-error, re-signal it with restarts
	(directory_search_scandir): use direntry_to_string
	* condition.lisp (check-value): accommodate direntry_to_string:
	when place is SYSTEM::PATHNAME-ENCODING, add a CONTINUE restart
	* constobj.d (handler_for_charset_type_error): always enable
	* constsym.d (datum): add

2008-07-15  Bruno Haible  <bruno@clisp.org>

	Avoid buffer overrun.
	* encoding.d (handle_incomplete): Add destend argument.
	(uni16be_mbstowcs, uni16le_mbstowcs, uni32be_mbstowcs,
	uni32le_mbstowcs): Update callers.

2008-07-15  Bruno Haible  <bruno@clisp.org>

	Fix bug introduced on 2003-03-11.
	* encoding.d (uni16_mblen): Make consistent with uni16be_mbstowcs and
	uni16le_mbstowcs.
	(uni32be_mblen): Make consistent with uni32be_mbstowcs.
	(uni32le_mblen): Make consistent with uni32le_mbstowcs.
	(CONVERT-STRING-FROM-BYTES): Revert last commit.
